<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/backg">

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="142dp"
        android:layout_height="175dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="14dp">

        <RadioButton
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one"
            android:textAlignment="center"
            android:textColor="@color/green" />

        <RadioButton
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two"
            android:textAlignment="center"
            android:textColor="@color/green" />

        <RadioButton
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/three"
            android:textAlignment="center"
            android:textColor="@color/green" />

        <RadioButton
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/four"
            android:textAlignment="center"
            android:textColor="@color/green" />

        <RadioButton
            android:id="@+id/r5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five"
            android:textAlignment="center"
            android:textColor="@color/green" />
    </RadioGroup>

    <Button
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="210dp"
        android:background="@color/design_default_color_primary_dark"
        android:text="@string/select"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="104dp"
        android:layout_marginTop="210dp"
        android:background="@color/design_default_color_primary_dark"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>