<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:orientation="vertical"
    android:padding="5dp">

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="353dp"
        android:headerBackground="@color/colorAccent"
        android:numbersSelectorColor="@color/design_default_color_primary_dark" />

    <Button
        android:id="@+id/add"
        android:layout_width="380dp"
        android:layout_height="38dp"
        android:layout_below="@+id/timePicker"
        android:layout_alignStart="@+id/timePicker"
        android:layout_marginStart="12dp"
        android:layout_marginTop="132dp"
        android:background="@color/design_default_color_primary_dark"
        android:clickable="true"
        android:text="@string/add"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="378dp"
        android:layout_height="36dp"
        android:layout_below="@+id/timePicker"
        android:layout_alignStart="@+id/timePicker"
        android:layout_marginStart="12dp"
        android:layout_marginTop="184dp"
        android:background="@color/design_default_color_primary_dark"
        android:clickable="true"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@color/design_default_color_primary_dark"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/alarmNameLabel"
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="364dp"
        android:ems="10"
        android:hint="Alarm Name"
        android:inputType="text"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="437dp"
        android:text="@string/tone"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="186dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="428dp"
        android:layout_marginEnd="18dp"
        android:textAlignment="center" />

</RelativeLayout>